@@ -40,6 +40,7 @@
 - postgres:
   - better reflection of sequences for alternate-schema Tables [ticket:442]
   - sequences on a non-pk column will properly fire off on INSERT
+  - added PGInterval type [ticket:460]
 - ext:
   - added distinct() method to SelectResults.  generally should only make a difference
   when using count().
